--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "^4.3.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "mongodb": "^3.1.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   },
@@ -22,7 +23,7 @@
     "restartable": "rs",
     "delay": 2500,
     "env": {
-      "PORT": 4000
+      "PORT": 7777
     }
   }
 }
